force-app/main/default/objects/Account/fields/accHierarchy__hasChildWithChanges__c.field-meta.xml
<CustomField>
    <fullName>accHierarchy__hasChildWithChanges__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Child With Changes</label>
    <type>Checkbox</type>
</CustomField>