force-app/main/default/objects/Account/fields/accHierarchy__On_Previous_Hierarchy_Level__c.field-meta.xml
<CustomField>
    <fullName>accHierarchy__On_Previous_Hierarchy_Level__c</fullName>
    <defaultValue>false</defaultValue>
    <label>On Previous Hierarchy Level</label>
    <type>Checkbox</type>
</CustomField>