force-app/main/default/objects/Account/fields/accHierarchy__TopParentId__c.field-meta.xml
<CustomField>
    <fullName>accHierarchy__TopParentId__c</fullName>
    <label>Top Parent Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>