force-app/main/default/objects/Account/fields/Activite__c.field-meta.xml
<CustomField>
    <fullName>Activite__c</fullName>
    <inlineHelpText>Pour sélectionner plusieurs valeurs maintenez la touche Ctrl enfoncée</inlineHelpText>
    <label>Activité</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bâtiment</fullName>
            </value>
            <value>
                <fullName>Eau &amp; Environnement</fullName>
            </value>
            <value>
                <fullName>Énergie &amp; Industrie</fullName>
            </value>
            <value>
                <fullName>Ville &amp; Mobilité</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>