force-app/main/default/objects/Account/fields/Alias__c.field-meta.xml
<CustomField>
    <fullName>Alias__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>si plusieurs alias, les séparer avec ;</inlineHelpText>
    <label>Alias</label>
    <length>100</length>
    <type>Text</type>
</CustomField>