force-app/main/default/objects/Account/fields/Categorie__c.field-meta.xml
<CustomField>
    <fullName>Categorie__c</fullName>
    <label>Catégorie</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AMO, programmiste, MOD</fullName>
            </value>
            <value>
                <fullName>Architecte</fullName>
            </value>
            <value>
                <fullName>Autre</fullName>
            </value>
            <value>
                <fullName>Autre partenaire</fullName>
            </value>
            <value>
                <fullName>BE Spécialisé</fullName>
            </value>
            <value>
                <fullName>Conseils juridique, financier</fullName>
            </value>
            <value>
                <fullName>Exploitant</fullName>
            </value>
            <value>
                <fullName>Financeurs, Investisseurs, Crédit bailleurs</fullName>
            </value>
            <value>
                <fullName>Ingénierie</fullName>
            </value>
            <value>
                <fullName>Paysagiste</fullName>
            </value>
            <value>
                <fullName>Urbaniste</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>