force-app/main/default/objects/Account/fields/Code_Agresso__c.field-meta.xml
<CustomField>
    <fullName>Code_Agresso__c</fullName>
    <description>Identifiant ERP de la société du groupe ingérop</description>
    <externalId>true</externalId>
    <label>Code Ingérop</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>