force-app/main/default/objects/Account/fields/Competences__c.field-meta.xml
<CustomField>
    <fullName>Competences__c</fullName>
    <label>Compétences</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>