force-app/main/default/objects/Account/fields/Id_BaseCom__c.field-meta.xml
<CustomField>
    <fullName>Id_BaseCom__c</fullName>
    <externalId>true</externalId>
    <label>Id_BaseCom</label>
    <length>110</length>
    <type>Text</type>
</CustomField>