force-app/main/default/objects/Account/fields/Link_to_Explore__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Explore__c</fullName>
    <description>This field displays a link to the Explore Account</description>
    <formula>IF( SIRET__c != null, HYPERLINK($Label.ExplorePageLink + SIRET__c, Name, &quot;_blank&quot;), $Label.ExplorePageMessage)</formula>
    <inlineHelpText>This field displays a link to the Explore Account</inlineHelpText>
    <label>Link to Explore</label>
    <type>Text</type>
</CustomField>