force-app/main/default/objects/Account/fields/Moyenne_des_scores__c.field-meta.xml
<CustomField>
    <fullName>Moyenne_des_scores__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Moyenne des scores</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>