force-app/main/default/objects/Account/fields/TECH_Activit_Batiment__c.field-meta.xml
<CustomField>
    <fullName>TECH_Activit_Batiment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TECH Activité Bâtiment</label>
    <type>Checkbox</type>
</CustomField>