force-app/main/default/objects/Account/fields/TECH_Activite_Eau_Environnement__c.field-meta.xml
<CustomField>
    <fullName>TECH_Activite_Eau_Environnement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TECH  Activité Eau &amp; Environnement</label>
    <type>Checkbox</type>
</CustomField>