force-app/main/default/objects/Account/fields/TECH_Activite_Energie_Industrie__c.field-meta.xml
<CustomField>
    <fullName>TECH_Activite_Energie_Industrie__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TECH  Activité Energie &amp; Industrie</label>
    <type>Checkbox</type>
</CustomField>