force-app/main/default/objects/Account/fields/TECH_Activite_Ville_Mobilite__c.field-meta.xml
<CustomField>
    <fullName>TECH_Activite_Ville_Mobilite__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TECH  Activité Ville &amp; Mobilité</label>
    <type>Checkbox</type>
</CustomField>