force-app/main/default/objects/Account/fields/Type_de_suivi__c.field-meta.xml
<CustomField>
    <fullName>Type_de_suivi__c</fullName>
    <label>Type de suivi</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Suivi</fullName>
            </value>
            <value>
                <fullName>Grand compte</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>