force-app/main/default/objects/Account/fields/Ultimate_Parent_ID__c.field-meta.xml
<CustomField>
    <fullName>Ultimate_Parent_ID__c</fullName>
    <formula>IF( 
	/* No Parent - orphaned or it is its own parent */
	LEN(Parent.Name)&lt;1 
	,Id
	,IF( 
		/* Parent Level 1 */
		LEN(Parent.Parent.Name )&lt;1
		,Parent.Id
		,IF(
			/* Parent Level 2 */
			LEN(Parent.Parent.Parent.Name )&lt;1 
			,Parent.Parent.Id
			,IF(
				/* Parent Level 3 */
				LEN(Parent.Parent.Parent.Parent.Name )&lt;1
				,Parent.Parent.Parent.Id
				,IF(
					/* Parent Level 4 */
					LEN(Parent.Parent.Parent.Parent.Parent.Name )&lt;1
					,Parent.Parent.Parent.Parent.Id
					,IF(
						/* Parent Level 5 */
						LEN(Parent.Parent.Parent.Parent.Parent.Parent.Name )&lt;1
						,Parent.Parent.Parent.Parent.Parent.Id
						,IF(
							/* Parent Level 6 */
							LEN(Parent.Parent.Parent.Parent.Parent.Parent.Parent.Name )&lt;1
							,Parent.Parent.Parent.Parent.Parent.Parent.Id
							,IF(
								/* Parent Level 7 */
								LEN( Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.Name )&lt;1
								,Parent.Parent.Parent.Parent.Parent.Parent.Parent.Id
								,IF(
									/* Parent Level 8 */
									LEN(Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.Name )&lt;1
									,Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.Id
									,&quot;Ultimate Parent Beyond 8 Levels&quot;
								)
							)
						)
					)
				)
			)
		)
	)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ultimate Parent ID</label>
    <type>Text</type>
</CustomField>