force-app/main/default/objects/Account/recordTypes/Autre.recordType-meta.xml
<RecordType>
    <fullName>Autre</fullName>
    <active>true</active>
    <label>Autre</label>
</RecordType>