force-app/main/default/objects/Account/recordTypes/Partenaire.recordType-meta.xml
<RecordType>
    <fullName>Partenaire</fullName>
    <active>true</active>
    <label>Partenaire</label>
</RecordType>