force-app/main/default/objects/Account/validationRules/Regle_de_validation_SIRET.validationRule-meta.xml
<ValidationRule>
    <fullName>Regle_de_validation_SIRET</fullName>
    <active>true</active>
    <errorConditionFormula>(!ISBLANK(ShippingCountry) &amp;&amp; (ShippingCountry=&quot;FRANCE&quot; || ShippingCountry=&quot;France&quot;))
&amp;&amp;
!ISBLANK(SIRET__c) &amp;&amp;(
!ISNUMBER(SIRET__c) ||

MOD(

VALUE(MID(SIRET__c, 14, 1))+

IF( VALUE(MID(SIRET__c, 13, 1))&lt;5,
VALUE(MID(SIRET__c, 13, 1))*2,
VALUE(MID(TEXT(VALUE(MID(SIRET__c, 13, 1))*2),1,1))+VALUE(MID(TEXT(VALUE(MID(SIRET__c, 13, 1))*2),2,1))
) +

VALUE(MID(SIRET__c, 12, 1))+

IF( VALUE(MID(SIRET__c, 11, 1))&lt;5,
VALUE(MID(SIRET__c, 11, 1))*2,
VALUE(MID(TEXT(VALUE(MID(SIRET__c, 11, 1))*2),1,1))+VALUE(MID(TEXT(VALUE(MID(SIRET__c, 11, 1))*2),2,1))
) +

VALUE(MID(SIRET__c, 10, 1))+

IF( VALUE(MID(SIRET__c, 9, 1))&lt;5,
VALUE(MID(SIRET__c, 9, 1))*2,
VALUE(MID(TEXT(VALUE(MID(SIRET__c, 9, 1))*2),1,1))+VALUE(MID(TEXT(VALUE(MID(SIRET__c, 9, 1))*2),2,1))
) +

VALUE(MID(SIRET__c, 8, 1))+

IF( VALUE(MID(SIRET__c, 7, 1))&lt;5,
VALUE(MID(SIRET__c, 7, 1))*2,
VALUE(MID(TEXT(VALUE(MID(SIRET__c, 7, 1))*2),1,1))+VALUE(MID(TEXT(VALUE(MID(SIRET__c, 7, 1))*2),2,1))
) +

VALUE(MID(SIRET__c, 6, 1))+

IF( VALUE(MID(SIRET__c, 5, 1))&lt;5,
VALUE(MID(SIRET__c, 5, 1))*2,
VALUE(MID(TEXT(VALUE(MID(SIRET__c, 5, 1))*2),1,1))+VALUE(MID(TEXT(VALUE(MID(SIRET__c, 5, 1))*2),2,1))
) +

VALUE(MID(SIRET__c, 4, 1))+

IF( VALUE(MID(SIRET__c, 3, 1))&lt;5,
VALUE(MID(SIRET__c, 3, 1))*2,
VALUE(MID(TEXT(VALUE(MID(SIRET__c, 3, 1))*2),1,1))+VALUE(MID(TEXT(VALUE(MID(SIRET__c, 3, 1))*2),2,1))
) +

VALUE(MID(SIRET__c, 2, 1))+

IF( VALUE(MID(SIRET__c, 1, 1))&lt;5,
VALUE(MID(SIRET__c, 1, 1))*2,
VALUE(MID(TEXT(VALUE(MID(SIRET__c, 1, 1))*2),1,1))+VALUE(MID(TEXT(VALUE(MID(SIRET__c, 1, 1))*2),2,1))
)

, 10) != 0
)</errorConditionFormula>
    <errorDisplayField>SIRET__c</errorDisplayField>
    <errorMessage>Le SIRET saisi n&apos;est pas valide</errorMessage>
</ValidationRule>