force-app/main/default/objects/Account/listViews/Compte_Autre.listView-meta.xml
<ListView>
    <fullName>Compte_Autre</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>Prive_public__c</columns>
    <columns>Categorie__c</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Autre</value>
    </filters>
    <filters>
        <field>Type_de_suivi__c</field>
        <operation>equals</operation>
        <value>Suivi</value>
    </filters>
    <label>Comptes Autre</label>
</ListView>