force-app/main/default/objects/Account/listViews/Compte_Entreprise.listView-meta.xml
<ListView>
    <fullName>Compte_Entreprise</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Prive_public__c</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.LAST_ACTIVITY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Entreprise</value>
    </filters>
    <filters>
        <field>Type_de_suivi__c</field>
        <operation>equals</operation>
        <value>Suivi</value>
    </filters>
    <label>Comptes Entreprise</label>
</ListView>