force-app/main/default/objects/Account/listViews/Mes_comptes.listView-meta.xml
<ListView>
    <fullName>Mes_comptes</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>Type_de_suivi__c</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Type_de_suivi__c</field>
        <operation>equals</operation>
        <value>Suivi</value>
    </filters>
    <label>Mes comptes suivis</label>
</ListView>