force-app/main/default/objects/Account/listViews/MyAccounts.listView-meta.xml
<ListView>
    <fullName>MyAccounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>Type_de_suivi__c</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>Prive_public__c</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Type_de_suivi__c</field>
        <operation>equals</operation>
        <value>Grand compte</value>
    </filters>
    <label>Mes Grands Comptes</label>
</ListView>