force-app/main/default/objects/Account/listViews/Non_Suivi.listView-meta.xml
<ListView>
    <fullName>Non_Suivi</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type_de_suivi__c</field>
        <operation>notEqual</operation>
        <value>Suivi</value>
    </filters>
    <filters>
        <field>Type_de_suivi__c</field>
        <operation>notEqual</operation>
        <value>Grand compte</value>
    </filters>
    <label>Non Suivis</label>
</ListView>